syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManagergRPC";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zup;

service KeyManagerRegistraGrpcService {
  rpc registrar (RegistraChaveRequest) returns (RegistraChaveResponse) {}
}

service KeyManagerRemoveGrpcService{
  rpc remover (RemoveChaveRequest) returns (RemoveChaveResponse) {}
}

service KeyManagerCarregaGrpcService {
  rpc carregar (CarregaChaveRequest) returns (CarregaChaveResponse) {}
}

service KeyManagerListaGrpcService {
  rpc listar (ListaChavesRequest) returns (ListaChavesResponse) {}
}

message ListaChavesRequest {
  string clienteId = 1;

}

message ListaChavesResponse {
  message ChavePix {
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;

  }

  string clienteId = 1;
  repeated ChavePix chaves = 2;
}


message CarregaChaveRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId = 2;
  }
  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message CarregaChaveResponse {
  message ChavePix {
    message ContaInfo {
      TipoConta tipo = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numeroConta = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}



message RemoveChaveRequest {
  string pixId = 1;
  string clienteId = 2;

}

message RemoveChaveResponse {
  string info = 1;
}


message RegistraChaveRequest {
  string clienteId = 1;
  TipoChave  tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChaveResponse {
  string clientId = 1;
  string pixId = 2;
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}